# ChangeLog for sys-fs/squash_dir
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*squash_dir-11.7 (08 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  08 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.6 (29 Feb 2012)

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass

  29 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fixes statusline (titlebar) logic

*squash_dir-11.5 (28 Feb 2012)

  28 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.4 (17 Feb 2012)

  17 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump. Support soft status line for screen. Care about TERM.

*squash_dir-11.3 (03 Nov 2011)

  03 Nov 2011; Martin Väth <martin@mvath.de>
  Version bump. Fix sh -c treatment.

*squash_dir-11.2-r1 (31 Oct 2011)

  31 Oct 2011; Martin Väth <martin@mvath.de>
  Change location.

*squash_dir-11.2 (29 Oct 2011)

  29 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump. Change location.

*squash_dir-11.1 (22 Oct 2011)

  22 Oct 2011; Martin Väth <martin@mvath.de>
  Version bump. Improve squash_dir script (order and alignment)

*squash_dir-11.0 (03 Sep 2011)

  03 Sep 2011; Martin Väth <martin@mvath.de>
  Version bump. Support COMPRESSION, default to xz. Update openrc interface.

*squash_dir-10.21 (21 Jan 2011)

  21 Jan 2011; Martin Väth <martin@mvath.de>
  Version bump. Support for titlebar

*squash_dir-10.20 (25 Dec 2010)

  04 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  25 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump. Minor improvements in zsh-completion

*squash_dir-10.19 (21 Dec 2010)

  21 Dec 2010; Martin Väth <martin@mvath.de>
  Version bump. Minor fixes in zsh-completion and configure.ac

*squash_dir-10.18 (11 Dec 2010)

  11 Dec 2010; Martin Väth <martin@mvath.de>