@@ -1,1 +1,1 @@
-DIST squash_dir-11.7.tar.gz 25820 RMD160 9649beb83501148ac9189971dbef1cf243fc97ad SHA1 d815dd555173d4263bcf2853d936f085a38a2d53 SHA256 2d4c57e619bce29a67ae3f8fcfa77e04eb4f758aed662e98e15c1ec498f2d39f
+DIST squash_dir-11.8.tar.gz 25849 RMD160 223f3456d5e7ff06d4424f4e33dbc69c05cc4c0f SHA1 cf58503cc86a5846994b87bea53849b7f4067770 SHA256 eb6f1055c343116d9e12e2190b4e360c541ca24508802f4da5fa1035013d98d8
