@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*squash_dir-11.8 (27 Apr 2012)
+
+  27 Apr 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Check for possibly obsolete /etc/mtab.lock
+
 *squash_dir-11.7 (08 Apr 2012)
 
   15 Apr 2012; Martin Väth <martin@mvath.de>
